<resources>
    <string name="app_name">Plasticity</string>
    <string name="title_log">Log</string>
    <string name="title_goals">Goals</string>
    <string name="title_friends">Friends</string>
    <string name="title_settings">Settings</string>


    <string-array name="friend_array">
        <item>Lily</item>
        <item>Poppy</item>
        <item>Sunflower</item>
        <item>Freesia</item>
        <item>Daisy</item>
        <item>Rose</item>
        <item>Daffodil</item>
        <item>Lavender</item>
        <item>Peony</item>
        <item>Lilac</item>
        <item>Dahlia</item>
        <item>Tulip</item>
        <item>Dandelion</item>
        <item>Geranium</item>
        <item>Gardenia</item>
        <item>Rhododendron</item>
        <item>Azalea</item>
    </string-array>

    <string name="settings">Settings</string>
    <string name="hidden_from_leaderboard">        Hidden from leaderboard                       </string>
    <string name="enable_friend_request">Enable friend request</string>
    <string name="social_and_friends">Social and friends</string>
    <string name="reminder">Reminder    ></string>
    <string name="sound">Sound</string>
    <string name="notification">Notification</string>
    <string name="nickname">Default Human</string>
    <string name="account">account@email.com</string>
    <string name="edit">edit</string>
    <string name="edit_reminders">Edit Reminders</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thusday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="save">Save</string>
    <string name="Delete">Delete</string>
    <string name="custom_name">Custom Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new">Add New</string>
    <string name="Reminder">Reminder</string>
    <string name="textview">TextView</string>

    <string name="title_add">Add</string>



</resources>