<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_log"
        android:icon="@drawable/ic_action_event_log"
        android:title="@string/title_log"
        />

    <item
        android:id="@+id/navigation_goals"
        android:icon="@drawable/ic_action_bar_chart"
        android:title="@string/title_goals" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_action_add_circle_outline"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_action_friends"
        android:title="@string/title_friends" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/title_settings" />



</menu>