<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.friends.FriendsFragment">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/text_edit_reminders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:text="@string/edit_reminders"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:layout_below="@+id/text_edit_reminders"
            android:layout_marginStart="100dp"
            android:padding="10dp"
            android:background="@android:color/black" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/custom_name"
            android:inputType="text"
            android:layout_below="@id/text_edit_reminders"
            android:padding="20dp"
            android:layout_centerHorizontal="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="@string/custom_name" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sundaysw"
            android:layout_below="@id/editText"
            android:text="@string/sunday"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mondaysw"
            android:layout_below="@id/sundaysw"
            android:text="@string/monday"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tuesdaysw"
            android:layout_below="@id/mondaysw"
            android:text="@string/tuesday"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wednesdaysw"
            android:layout_below="@id/tuesdaysw"
            android:text="@string/wednesday"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thusdaysw"
            android:layout_below="@id/wednesdaysw"
            android:text="@string/thusday"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"/>


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fridaysw"
            android:layout_below="@id/thusdaysw"
            android:text="@string/friday"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saturdaysw"
            android:layout_below="@id/fridaysw"
            android:text="@string/saturday"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save"
            android:layout_below="@id/timepicker"
            android:text="@string/save"
            android:layout_marginStart="75dp"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete"
            android:layout_below="@id/timepicker"
            android:text="@string/Delete"
            android:layout_toEndOf="@id/save"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <TimePicker
            android:id="@+id/timepicker"
            android:layout_width="wrap_content"
            android:layout_height="97dp"
            android:layout_below="@id/saturdaysw"
            android:layout_marginTop="0dp"
            android:layout_centerHorizontal="true"
            />


    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>

