<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.friends.FriendsFragment">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">



        <ImageView
            android:id="@+id/pic"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:padding="20dp"
            android:src="@drawable/profile_photo"/>

        <TextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/nickname"
            android:textAlignment="center"
            android:layout_toEndOf="@id/pic"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nickname"
            android:padding="10dp"
            android:text="@string/account"
            android:textAlignment="center"
            android:layout_toEndOf="@id/pic"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_edit"
            android:layout_toEndOf="@+id/nickname"
            android:layout_alignTop="@+id/nickname"
            android:text="@string/edit"
            android:padding="5dp"
            android:textColor="@color/teal_200"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/pic"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25sp"
            android:padding="10dp"
            android:text="@string/notification"
            android:layout_below="@+id/pic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/soundsw"
            android:checked="true"
            android:layout_below="@+id/notification"
            android:textSize="20sp"
            android:padding="20dp"
            android:text="@string/sound"/>

        <Button
            android:id="@+id/textButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder"
            android:textSize="20sp"
            android:padding="20dp"
            android:layout_below="@+id/soundsw"
            android:textColor="@color/teal_200"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/textButton"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/social"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="10dp"
            android:textSize="25sp"
            android:text="@string/social_and_friends"
            android:layout_below="@+id/textButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/allowRequest"
            android:checked="true"
            android:layout_below="@+id/social"
            android:textSize="20sp"
            android:padding="20dp"
            android:text="@string/enable_friend_request"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hideScore"
            android:layout_below="@+id/allowRequest"
            android:textSize="20sp"
            android:padding="20dp"
            android:text="@string/hidden_from_leaderboard"/>

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>